[package]
name = "clairvoyance"
version = "0.1.0"
edition = "2024"

[dependencies]
stacks-common = { workspace = true }
clarity-types = { workspace = true }
clarity = { workspace = true }
serde = "1"
serde_derive = "1"
slog = { version = "2.5.2", features = [ "max_level_trace" ] }

[dependencies.serde_json]
version = "1.0"
features = ["arbitrary_precision", "unbounded_depth", "raw_value"]

[patch.crates-io]
stacker = { git = "https://github.com/jcnelson/stacker"}


