[package]
name = "clarity-symbex"
version = "0.1.0"
edition = "2024"

[dependencies]
stacks-common = { package = "stacks-common", path = "../stacks-common" }
serde = "1"
serde_derive = "1"
slog = { version = "2.5.2", features = [ "max_level_trace" ] }

[dependencies.serde_json]
version = "1.0"
features = ["arbitrary_precision", "unbounded_depth", "raw_value"]

[patch.crates-io]
stacker = { git = "https://github.com/jcnelson/stacker"}

[dependencies.clarity-types]
version = "0.0.1"
features = ["rusqlite", "developer-mode"]
package = "clarity-types"
path = "../clarity-types"

[dependencies.clarity]
version = "0.0.1"
features = ["rusqlite", "developer-mode"]
package = "clarity"
path = "../clarity"

